# geometry-lib

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
geometry_lib/: __init__.py
geometry_lib/geometry/: __init__.py  shapes.py  utils.py
tests/: __init__.py  test_shapes.py  test_utils.py
